NguyenDinhTien-cuoi-ky-gd-1/manifest/6-security/yc1/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  namespace: default
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: "tienshawn.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port:
              number: 80
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: backend-service
            port:
              number: 5000
